Don't lose progerss or ill kms

--- a/sections/appraisals.tex
+++ b/sections/appraisals.tex
@@ -16,11 +16,11 @@ Up to the current phase of our project, we were able to gather several important
 Exploring the literature and trying to work the problem under different perspectives
 may lead to potential breakthroughs. The main catalyst to our core finding, came
 when looking into problems such as \textsc{EOPL} or more specifically
-the \textsc{OPDC} problem, described by Fernley et al. \cite{fearnley_unique_2020}.
+the \textsc{OPDC} problem, described by Fernley et al. \cite{fearnley_UniqueEndPotential_2020}.
 \textsc{OPDC} can be described as a simpler version of the traditonal n-dimensional Brouwer problem
 where instead, we have a unqiue fixed point and our function will point towards the unique solution.
 Moreover, deeper look into Kleene-logic or more specifically \textit{Hazard-free} circuits allowed
-us to exploit the $\bot$ value to compute multiple input simultaneously \cite{ikenmeyer_complexity_2019}.
+us to exploit the $\bot$ value to compute multiple input simultaneously \cite{ikenmeyer_ComplexityHazardfreeCircuits_2019}.
 Using the two aforementioned observations as well as looking at the original reduction again allowed us to achieve
 the desired breakthrough.
 
