--- a/sections/current_progress/soft_progress.tex
+++ b/sections/current_progress/soft_progress.tex
@@ -1,7 +1,7 @@
 In our project we are also focused on developing a visualisation tool
 for \textsc{PureCircuit} instances. 
 In our introduction we referred to three main objectives. As of time of writing
-we are close to the completion of the first one. We will provide a table of
+w are close to the completion of the first one. We will provide a table of
 objectives that have been achieved, as well as the remaining requirements needed
 to complete the first milestone in \ref{tab:soft:rem-unrem-issues-stage1}. Lastly, we provide a figure
 of our current visualisation in \ref{fig:soft:current-phases}
