--- a/sections/next_steps.tex
+++ b/sections/next_steps.tex
@@ -1,4 +1,3 @@
-
 \subsection{Theory Crafting Next steps}
 
 Our next steps will focus mainly on two directions. One is lowering the bound as we declare in our conjecture with the
@@ -36,19 +35,19 @@ of \textsc{PureCircuit}.
 
 
 Alternatively, one can use some facts of \textsc{PureCircuit} showed by Deligkas et al.
-\cite{deligkas_pure-circuit_2024}, were under specific 
+\cite{deligkas_PureCircuitTightInapproximability_2024}, were under specific 
 gate sets, one can find a \textsc{PureCircuit} instance in polynomial time.
 Additionally we were able to find instances or variants of \textsc{PureCircuit}
 that are much easier. Conditions like acyclicity make our problem much easier to deal with
 or permutation free circuit, make the problem easier to solve.
 But just because a solution can be easy to find, does not imply that finding the total number of solutions
-is easy, as \cite{valiant_complexity_1979} indicated, or from a more direct
-example by \cite{arora_computational_2009}, where
+is easy, as \cite{valiant_ComplexityComputingPermanent_1979} indicated, or from a more direct
+example by \cite{arora_ComputationalComplexityModern_2009}, where
 $$
 \textsc{HamiltonianCycle} \leq_P \textsc{\#Cycle}
 $$
 
 
-\subsection{Risk Management}
+
 
 
