--- a/main.tex
+++ b/main.tex
@@ -10,13 +10,14 @@
 \usepackage{placeins}
 \usepackage{hyperref}
 \usepackage{algorithmic}
-\usepackage{tabularx}
+\usepackage{ltablex}
 \usepackage{graphicx}
 \usepackage{lipsum}
 \usepackage{textcomp}
 \usepackage{xcolor}
 \usepackage{tikz}
 \usepackage{subcaption}
+
 \def\BibTeX{{\rm B\kern-.05em{\sc i\kern-.025em b}\kern-.08em
     T\kern-.1667em\lower.7ex\hbox{E}\kern-.125emX}}
 
@@ -37,6 +38,95 @@
   attach boxed title to top left={xshift=0.5cm, yshift=-2mm},
   boxed title style={colback=white, boxrule=0pt},
 }{def}
+
+\newtcbtheorem[auto counter, number within=section]{theorembox}{theorem}{
+  colback=gray!5!white,
+  colframe=black!60,
+  coltitle=black,
+  fonttitle=\bfseries,
+  boxrule=0.3mm,
+  arc=1mm,
+  left=1mm,
+  right=1mm,
+  top=1mm,
+  bottom=1mm,
+  enhanced,
+  sharp corners=south,
+  attach boxed title to top left={xshift=0.5cm, yshift=-2mm},
+  boxed title style={colback=white, boxrule=0pt},
+}{thm}
+
+\newtcbtheorem[auto counter, number within=section]{conjecturebox}{Conjecture}{
+  colback=gray!5!white,
+  colframe=black!60,
+  coltitle=black,
+  fonttitle=\bfseries,
+  boxrule=0.3mm,
+  arc=1mm,
+  left=1mm,
+  right=1mm,
+  top=1mm,
+  bottom=1mm,
+  enhanced,
+  sharp corners=south,
+  attach boxed title to top left={xshift=0.5cm, yshift=-2mm},
+  boxed title style={colback=white, boxrule=0pt},
+}{conj}
+
+
+\newtcbtheorem[auto counter, number within=section]{propositionbox}{Proposition}{
+  colback=gray!5!white,
+  colframe=black!60,
+  coltitle=black,
+  fonttitle=\bfseries,
+  boxrule=0.3mm,
+  arc=1mm,
+  left=1mm,
+  right=1mm,
+  top=1mm,
+  bottom=1mm,
+  enhanced,
+  sharp corners=south,
+  attach boxed title to top left={xshift=0.5cm, yshift=-2mm},
+  boxed title style={colback=white, boxrule=0pt},
+}{prop}
+
+
+
+\newtcbtheorem[auto counter, number within=theorem]{lemmabox}{Lemma}{
+  colback=gray!5!white,
+  colframe=black!60,
+  coltitle=black,
+  fonttitle=\bfseries,
+  boxrule=0.3mm,
+  arc=1mm,
+  left=1mm,
+  right=1mm,
+  top=1mm,
+  bottom=1mm,
+  enhanced,
+  sharp corners=south,
+  attach boxed title to top left={xshift=0.5cm, yshift=-2mm},
+  boxed title style={colback=white, boxrule=0pt},
+}{lem}
+
+\newtcbtheorem[auto counter, number within=section]{claimbox}{Claim}{
+  colback=gray!5!white,
+  colframe=black!60,
+  coltitle=black,
+  fonttitle=\bfseries,
+  boxrule=0.3mm,
+  arc=1mm,
+  left=1mm,
+  right=1mm,
+  top=1mm,
+  bottom=1mm,
+  enhanced,
+  sharp corners=south,
+  attach boxed title to top left={xshift=0.5cm, yshift=-2mm},
+  boxed title style={colback=white, boxrule=0pt},
+}{clm}
+
 
 \newtheorem{theorem}{Theorem}[section]
 \newtheorem{conjecture}[theorem]{Conjecture}
@@ -64,10 +154,6 @@ u2018918@live.warwick.ac.uk, u2018918}}
 \begin{abstract}
 \input{sections/abstract}
 \end{abstract}
-
-\begin{IEEEkeywords} % Index 
-    Complexity Theory, Counting Complexity, Hazard Free Circuits, TFNP, PPAD, Search Problems, Kleene Logic
-\end{IEEEkeywords}
 
 \section{Introduction}
 \input{sections/intro}
