--- a/sections/intro.tex
+++ b/sections/intro.tex
@@ -4,15 +4,15 @@ Combinatronics has been a field of study in mathematics that primarily focused o
 the notion of counting objects with certain properties. Over time, this notion
 has shifted, especially in the subfield of algebraic combinatorics, where
 there is no clear notion of the object that we are counting,
-and the numbers express something more abstract \cite{pak_what_2022,ikenmeyer_what_2022, ikenmeyer_positivity_2024}.
+and the numbers express something more abstract \cite{pak_WhatCombinatorialInterpretation_2022}.
 This gave a need to be able to assign a combinatorial interpretation to such numbers, or
 more simply, do these numbers correspond to some counting over a set of objects.
 Being able to find such definitions or interpretations can be very important,
 it allows us to utilise tools from combinatorics as well as allow us to understand
-and reveal hidden structures and properties for such numbers \cite{pak_what_2022}. 
+and reveal hidden structures and properties for such numbers \cite{pak_WhatCombinatorialInterpretation_2022}. 
 Moreover, there are several problems or numbers such as \textit{Kronecker coefficients},
 whose combinatorial interpretation, would give a step towards the resolution of the $\textit{P} \neq \textit{NP}$
-conjecture \cite{ikenmeyer_what_2022}.
+conjecture \cite{ikenmeyer_WhatWhatNot_2022}.
 
 
 To reiterate the previous statement, we can understand combinatorial interpretation as
@@ -20,7 +20,7 @@ the process of: given a sequence of numbers $\{a_x\}$,
 find a set of combinatorial objects $A_x$ such that $|A_x| = a_x$
 To formalise the current idea, Igor Pak et al. has concluded that
 $f \in \textit{\#P}$, implies that $f$ has a combinatorial interpretation
-\cite{pak_what_2022, ikenmeyer_what_2022}.
+\cite{pak_WhatCombinatorialInterpretation_2022, ikenmeyer_WhatWhatNot_2022}.
 We will explore this idea in much greater detail in the upcoming section,
 but the main benefit is the ability to use a very expressive but formal language
 that encapsulates this notion of a combinatorial interpretation.
@@ -52,7 +52,7 @@ Below we will present our table of objectives. We will denote updated objectives
     \item (!) Demonstrate that $\textbf{\#}\text{PPAD}(PureCircuit)- 1 \not\subseteq \textbf{\#P}$
     \item (*) Prove or disprove the following $\forall n \in \mathbb{N}_{\geq 2}$:
 \[
-\exists c \in \mathbb{N}:  \scn{\#SourceOrExcess}(n, 1) \subseteq^c \scn{PureCircuit}
+\exists c \in \mathbb{N}:  \scn{\#SourceOrExcess}(n, 1) \subseteq^c \scn{\#PureCircuit}
 \]
 
 \end{enumerate}
@@ -73,8 +73,7 @@ the current ones as well as general reflections.
 \subsection{Research Question}
 
 Our main objectives lead to the following conjecture:
-\begin{conjecture}[$\scn{\#PPAD}-1$ hardness]
-    \label{conj:core-conj}
+\begin{conjecturebox}{$\scn{\#PPAD}-1$ hardness}{ppad-1-hardness}
     We conjecture that proposition that every language in $\scn{\#PPAD}-1$
     can be parsimoniously reduced up to some polynomial factor to  $\scn{\#PureCircuit} -1$.
     We express that idea more formally as such:
@@ -82,9 +81,9 @@ Our main objectives lead to the following conjecture:
     \forall L \in \textsc{PPAD}, \exists f \in n^{O(1)}: 
     \#L -1 \subseteq^f \scn{\#PureCircuit} -1
     $$
-\end{conjecture}
+\end{conjecturebox}
 
-The conjecture \ref{conj:core-conj} captures the essence of our work. Being
+The conjecture \ref{conj:ppad-1-hardness} captures the essence of our work. Being
 able to finding such relations will allow us to understand in greater depth the complexities
 behind $\scn{\#TFNP} - 1$ class.
 
